Uploading notebooks for the Unit 1 case

--- a/Notebooks/Unit 4 Challenge - Tier 3.ipynb
+++ b/Notebooks/Unit 4 Challenge - Tier 3.ipynb
@@ -1515,9 +1515,9 @@
    "source": [
     "## Conclusion:\n",
     "\n",
-    "There are 17 boroughs above the mean of all London Boroughs. Based on this information, 17 of the boroughs increase the most over the last decade. Having an extreme with a ratio of 6.19. To better interpret this ration lets say the average increase was 371% over a decade, while Hackney increased a 519%.\n",
+    "There are 17 boroughs above the mean of all London Boroughs. Based on this information, 17 of the boroughs increase the most over the last decade. Having an extreme with a ratio of 6.19. To better interpret this ratios let's say the average increase was 371% over a decade, while Hackney increased 519%.\n",
     "\n",
-    "A couple of things that could help to understand better the dataset would be calculating the average year over year percentage change. After identifying Hackney as the district with the biggest impact, I decided to plot the average price by year. I noticed an explosive dollar increase until year 2017. After 2017 the price seems to be stagnant and increasing slowly, which could mean that the market maximum has been found. "
+    "A couple of things that could help to understand the dataset better would be calculating the average year over year percentage change. After identifying Hackney as the district with the biggest impact, I decided to plot the average price by year. I noticed an explosive dollar increase until 2017. After 2017 the price seems to be stagnant and increasing slowly, which could mean that the market maximum has been found.\n"
    ],
    "metadata": {
     "collapsed": false
